--- a/src/main/resources/templates/stock-state.html
+++ b/src/main/resources/templates/stock-state.html
@@ -11,7 +11,7 @@
 <canvas id="txCountChart" width="400" height="400"></canvas>
 </div>
 <script th:inline="javascript">
-  var poductColors = ["red", "blue", "green", "magenta", "cyan", "purple", "gray", "aqua", "orange"]
+  var poductColors = ["red", "blue", "green", "magenta", "cyan", "purple", "gray", "darkred", "orange"]
   var shopId = [[${shopId}]]
 
   var ctx = document.getElementById('txCountChart').getContext('2d');
