--- a/src/main/resources/templates/stock-state.html
+++ b/src/main/resources/templates/stock-state.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Transaction count</title>
+  <title>Stock state</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js" integrity="sha512-Wt1bJGtlnMtGP0dqNFH1xlkLBNpEodaiQ8ZN5JLA5wpc1sUlk/O5uuOMNgvzddzkpvZ9GLyYNa8w2s7rqiTk5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
 
-<div style="width: 400px; height: 400px">
-<canvas id="txCountChart" width="400" height="400"></canvas>
+<div style="width: 600px; height: 600px">
+<canvas id="txCountChart" width="600" height="600"></canvas>
 </div>
 <script th:inline="javascript">
   var poductColors = ["red", "blue", "green", "magenta", "cyan", "purple", "gray", "darkred", "orange"]
@@ -24,7 +24,7 @@
     data: {
       labels: labels,
       datasets: [{
-        label: '# of transactions',
+        label: '# stock state',
         backgroundColor: poductColors,
         data: data,
       }]
